# pepr

./: .gitignore  Bs.lean  Cargo.toml  README.md  flake.nix  grammar.txt  leanpkg.toml
src/: bakery.ftcnf  bakery.rs  cli.rs  dimacs.rs  fm.rs  fmt.rs  grammar.pest  index.rs  la.rs  macros.rs  main.rs  normalize.rs  parser.rs  resolution.rs  saturation.rs  substitution.rs  subsumption.rs  symbols.rs  test.rs  unification.rs  util.rs
