[package]
name = "pepr"
version = "0.1.0"
authors = ["Lorenz Leutgeb <lorenz@mpi-inf.mpg.de>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
pest = "2.1.3"
pest_derive = "2.1.0"
clap = { version = "3.1.1", features = ["cargo", "color", "derive", "suggestions", "std", "unicode", "wrap_help"] }
clap-verbosity-flag = "1.0.0"
string-interner = "0.14.0"
itertools = "0.10.3"
minilp = "0.2.2"
good_lp = { version = "1.3.1", features = ["minilp"], default-features = false }
log = { version = "0.4", features = ["std", "release_max_level_warn"] }
env_logger = "0.9"
dimacs = "0.2"

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "benchmark"
harness = false